# mtp-cull

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  mtp.rs  mtp_file.rs  ui-windows.rs  ui.rs
src/commands/: copy_files.rs  list_content.rs  list_devices.rs  mod.rs
